# auth-fastapi-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  docker-compose.ymll  pyproject.toml
migration/: env.py
migration/versions/: 3cf6f02682cb_create_users_table.py
src/: .env.example  config.py  main.py
src/application/interfaces/: email_service.py  password_hasher_repository.py  token_service.py  user_cache_repository.py  user_repository.py
src/application/use_cases/: user_service.py
src/domain/entities/: user.py
src/infrastructure/: dependencies.py  secure.py  token_service_impl.py
src/infrastructure/api/v1/routes/: auth.py
src/infrastructure/api/v1/schemas/: users.py  verify_code.py
src/infrastructure/database/: database.py
src/infrastructure/database/models/: __init__.py  user_model.py
src/infrastructure/database/repositories/: user_repository_impl.py
src/infrastructure/email/: email_client_manager.py
src/infrastructure/email/repositories/: user_email_repository_impl.py
src/infrastructure/redis/: redis_client_manager.py
src/infrastructure/redis/repositories/: user_redis_repository_impl.py
